fix: update background color of section-gray for improved visibility

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -4803,7 +4803,7 @@ blockquote {
 
 .section-gray {
   text-align: left;
-  background-color: #f1f1f7;
+  background-color: #ffffff;
   padding-top: 0;
   padding-bottom: 100px;
 }
